option('tests', type: 'feature', description: 'Build tests')

option(
    'host-name',
    type: 'string',
    value: 'host',
    description: 'The Host name in the object path.',
)

option(
    'control-host-obj-mgr',
    type: 'string',
    value: '/org/open_power/control',
    description: 'The Control Host D-Bus Object Manager.',
)

# Generate configuration from Yaml
option(
    'invsensor-yaml-gen',
    type: 'string',
    value: 'inventory-sensor-example.yaml',
)
