option('tests', type: 'feature', description: 'Build tests')

option(
    'host-name',
    type: 'string',
    value: 'host',
    description: 'The Host name in the object path.',
)

option(
    'control-host-obj-mgr',
    type: 'string',
    value: '/org/open_power/control',
    description: 'The Control Host D-Bus Object Manager.',
)